tests/baselines/reference/genericTypeAssertions6.errors.txt
tests/cases/compiler/genericTypeAssertions6.ts(8,13): error TS2352: Conversion of type 'U' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/genericTypeAssertions6.ts(9,13): error TS2352: Conversion of type 'T' to type 'U' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/genericTypeAssertions6.ts(19,17): error TS2352: Conversion of type 'U' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Date'.
    Type 'Date' is not comparable to type 'T'.
      'Date' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Date'.


==== tests/cases/compiler/genericTypeAssertions6.ts (3 errors) ====
    class A<T,U> {
        constructor(x) {
            var y = <T>x;
            var z = <U>x;
        }
    
        f(x: T, y: U) {
            x = <T>y;
                ~~~~
!!! error TS2352: Conversion of type '{|U|0|}' to type '{|T|1|}' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions6.ts:1:11
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions6.ts:1:9
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions6.ts:1:11
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions6.ts:1:9
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions6.ts:1:9
            y = <U>x;
                ~~~~
!!! error TS2352: Conversion of type '{|T|0|}' to type '{|U|1|}' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   '{|T|2|}' is assignable to the constraint of type '{|U|3|}', but '{|U|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions6.ts:1:9
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions6.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions6.ts:1:9
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions6.ts:1:11
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions6.ts:1:11
        }
    }
    
    class B<T extends Date, U extends Date> extends A<T, U> {
        g(x: T) {
            var a: Date = x;
            var b = <Date>x;
            var c = <T>new Date();
            var d = <U>new Date();
            var e = <T><U>new Date();
                    ~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type '{|U|0|}' to type '{|T|1|}' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|Date|5|}'.
!!! error TS2352:     Type '{|Date|6|}' is not comparable to type '{|T|7|}'.
!!! error TS2352:       '{|Date|8|}' is assignable to the constraint of type '{|T|9|}', but '{|T|10|}' could be instantiated with a different subtype of constraint '{|Date|11|}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions6.ts:13:25
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions6.ts:13:9
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions6.ts:13:25
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions6.ts:13:9
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions6.ts:13:9
!!! annotated symbol 5 /.ts/lib.es5.d.ts:729:11
!!! annotated symbol 6 /.ts/lib.es5.d.ts:729:11
!!! annotated symbol 7 tests/cases/compiler/genericTypeAssertions6.ts:13:9
!!! annotated symbol 8 /.ts/lib.es5.d.ts:729:11
!!! annotated symbol 9 tests/cases/compiler/genericTypeAssertions6.ts:13:9
!!! annotated symbol 10 tests/cases/compiler/genericTypeAssertions6.ts:13:9
!!! annotated symbol 11 /.ts/lib.es5.d.ts:729:11
        }
    }
    
    var b: B<Date, Date>;
    var c: A<Date, Date> = <A<Date, Date>>b;